--- a/index.htm
+++ b/index.htm
@@ -251,16 +251,22 @@ body {
 
 <!-- LETTER PAGES -->
    <div id="2month" class="letter-page">
+<div id="2month" class="letter-page">
 <h2>Our 2 Monthaversary! 🎉</h2>
 <p>
-Hi my baby 💖, I can’t believe it’s already been 2 months! Every moment with you has been pure magic.  
-Thank you for being you, for making me laugh, for caring, and for loving me.  
-I’m so excited for everything we’ll share in the future. Here’s to many more months together!  
-I love you so much, always and forever. 🥰
+hi my baby, i can’t believe it’s already been 2 months with you woaaahh. it still feels unreal to me how we randomly met and then boom we clicked instantly awh my baby☹️☹️ every single moment with you has been pure magic. you’ve made me live through all those movie love stories without me even having to ask for it, and honestly that’s the kind of love i’ll never get tired of, the kind that just happens naturally. i love you eo much i could seriously hug you forever and ever without letting go. over time you’ve become my favorite person, the only one i can trust with every part of me, which again CRAZY because i never thought i’d ever love or trust someone this much omg, and yet here i am in a relationship with the bestest person ever, and i honestly couldn’t ask for anyone or anything better than you. 
+
+you’re always so affectionate with me and you never fail to make me feel loved, whether it’s through your tiny gestures, your drawings of my favorite flowers when you can’t give them to me irl, your letters and paragraphs every night, your reminders of how much you love me every day, or the way you make me feel like i’m the perfectest person ever. i can’t even pick a favorite way because they’re all so precious in ways words just can’t capture. you’re the love of my life, the one i want to love again and again for the rest of my life. normally i get tired of loving people, but with you i feel like even the love i have in me isn’t even close to how much i love you. our love is so deep that even the connection of our souls can’t compare. you’re my forever, my one and only, and if it isn’t you it’s no one, and that’s exactly how i want it to stay.
+
+and baby, i don’t say this enough, or at least not nearly as much as it should be said, but thank you for being you, for making me laugh until my cheeks hurt, for caring for me so deeply, and for loving me so effortlessly. sometimes i just sit there and think, no way this man is my boyfriend, like seriously pinky promise on everything baby you’re so perfect that it always shocks me. i’m the luckiest woman on earth to have someone like you by my side, loving me more and more every single day, even when we fight over who loves who more 😡😡😡
+
+i’m so excited for everything we’ll share in the future. woahh summer you can’t forget summer HELLYEWH, just imagine how much we will end up kissing eachother every 3 seconds or tje 2 rounds woaaahh. okay but baby especially our kids awh i can’t wait for us to be parents because i promise you that you’ll be the bestest dad there is, just like you are the bestest boyfriend and future husband. i can already see us laughing so hard at bedtime stories that we made up for our kids, or building forts in the living room, or even baking together with you throwing flour at my face, and maybe one day explaining to our kids why their dad can’t physically say no to their mom because he loves her too much. here’s to many more months together myhearttt, many many months filled with chaos love laughter and all the little things that make us, well us.
+
+i love you so much, always and forever.💗
 </p>
 <button class="back-btn" onclick="goBack()">Close</button>
-</div> 
-<div id="miss" class="letter-page">
+</div>
+
     <h2>When You Miss Me</h2>
    <p>  If you’re missing me nownownow then that honestly makes my heart ache in the bestest way ever because It means what we have is real enough to be felt when we’re apart. It means I matter to you and that’s means the whole world to me. woaaah i matter to my boyfriend YAYAYAYYAYA AWHHH MY BABYY 
 
